Introduction to React finished

--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
+
+    <script src="../src/jquery.toast.min.js" ></script>
+    <style src="../node_modules/jquery-toast-plugin/dist/jquery.toast.min.css"></style>
+  
+    <script>
+      $(document).ready(function(){
+        $('.testing').click(function(event){
+        console.log("clicked link");
+        $.toast("Hola testing");
+        });
+    
+
+        $('#submit').click( function(event) {
+        event.preventDefault();
+        console.log("Submit clicked");
+        $.toast("Lo has creado exitosamente.");
+}
+
+);
+      });
+
+     
+
+    </script>
   </body>
 </html>
